[package]
name = "some_bevy_tools"
version = "0.1.0"
description = "A collection of tools which can be used in the Bevy Engine."
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
authors = ["Simon Goller <simon.goller@posteo.de>"]
repository = "https://github.com/neosam/some_bevy_tools"
homepage = "https://github.com/neosam/some_bevy_tools"
keywords = ["gamedev", "bevy"]
categories = ["game-development", "game-engines"]

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy_rapier2d"]
bevy_rapier2d = ["dep:bevy_rapier2d"]
bevy_rapier3d = ["dep:bevy_rapier3d"]

[dependencies]
bevy = "0.13.0"
bevy_rapier2d = { version = "0.25.0", features = [
    "debug-render-2d",
], optional = true }
bevy_rapier3d = { version = "0.25.0", features = [
    "debug-render",
], optional = true }
